Updated gitignore and tiles of pages

--- a/src/app/feature/character/character-details-page/character-details-page.component.html
+++ b/src/app/feature/character/character-details-page/character-details-page.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
+  <h1 class="mat-h1">Character Details</h1>
   <mat-grid-list cols="2" rowHeight="1000px">
     <mat-grid-tile [colspan]="2" [rowspan]="1">
       <mat-card class="dashboard-card" *ngIf="character">
@@ -56,8 +56,6 @@
             </mat-grid-tile>
           </mat-grid-list>
         </div>
-          
-          <button mat-button (click)="DebugLog()">Submit</button>
         </mat-card-content>
 
 
