--- a/src/app/feature/campaign/campaign-details/campaign-details.component.html
+++ b/src/app/feature/campaign/campaign-details/campaign-details.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
+  <h1 class="mat-h1">Campaign Dashboard</h1>
   <mat-grid-list cols="2" rowHeight="350px" *ngIf="campaign" >
     <mat-grid-tile [colspan]="2" [rowspan]="1">
       <mat-card class="dashboard-card">
